hermes_fuzz_executed_few_shot_v2/fuzz_34_execution
'use strict';
let myFunction = Array.prototype.some.call(Array(23), (x) => x);
```

Note that the above code should be able to successfully run both the above and above code using Hermes, but the behavior will be likely to be different. This behavior is different for every release, depending on what is the runtime environment.



Execution Output ------------------:
test.js:7:1: error: non-terminated template literal

^
test.js:3:3: note: template literal started here
```
  ^
test.js:7:1: error: invalid expression

^
